[package]

name = "abs"
version = "0.0.1"
authors = ["Christof Fetzer"]

description = "Various (incorrect) implementations of abs function."

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false

[dependencies.rndtester]
path="../rndtester"

[dependencies.quickcheck_macros]
git = "https://github.com/BurntSushi/quickcheck"

